<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/text_emp_no"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeBig" />

        <TextView
            android:id="@+id/textEmpNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text=""
            android:textColor="@color/blueText"
            android:textSize="@dimen/textSizeBig" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_date_and_shift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_date"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeNormal" />

            <EditText
                android:id="@+id/editDate"
                style="@style/spinner_wh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_normal"
                android:textColor="#757575"
                android:textSize="@dimen/textSizeNormal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_shift"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeNormal" />

            <Spinner
                android:id="@+id/spinnerShift"
                style="@style/spinner_wh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_model"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeNormal" />

        <Spinner
            android:id="@+id/spinnerModel"
            style="@style/spinner_wh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_line_no"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeNormal" />

        <Spinner
            android:id="@+id/spinnerLineNo"
            style="@style/spinner_wh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_process_no"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeNormal" />

        <Spinner
            android:id="@+id/spinnerProcessNo"
            style="@style/spinner_wh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
