<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/text_select_line_leader"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeBig" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topLayout"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:id="@+id/spinnerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_line_leader"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeNormal" />

            <EditText
                android:id="@+id/lineLeaderEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="Select line leader "
                style="@android:style/Widget.Holo.Light.Spinner"
                android:textSize="@dimen/textSizeNormal"
                android:inputType="none" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/firstSerialLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middleLayout"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_first_serial_no"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeNormal" />

        <EditText
            android:id="@+id/firstSerialEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstSerialLayout"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_lot_no"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeNormal" />

        <EditText
            android:id="@+id/lotNoEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/lotNoSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/middleLayout">

        <TextView
            android:id="@+id/hideText"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_line_leader"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeNormal"
            android:visibility="invisible" />

        <FrameLayout
            android:layout_toRightOf="@+id/hideText"
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/bgModel">
        </FrameLayout>

    </RelativeLayout>


</RelativeLayout>
